<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_window_background"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="@dimen/_200sdp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_25sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_25sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_25sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_25sdp" />

        <View
            android:id="@+id/imageBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_minus10sdp"
            android:background="@drawable/dialog_background"
            app:layout_constraintBottom_toBottomOf="@+id/bottomPadding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewIcon" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonClose"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_20sdp"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="@+id/imageBackground"
            app:layout_constraintTop_toTopOf="@+id/imageBackground"
            app:srcCompat="@drawable/ic_close" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/app_logo"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/FontMontserratExtraBold.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/colorTertiary"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/tvSubTitle"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/imageViewIcon"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle"
            style="@style/FontOpenSansRegular.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/colorTertiary"
            android:textSize="@dimen/_9ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvMessage"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/demo_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            style="@style/FontMontserratRegular.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintBottom_toTopOf="@+id/buttonPositive"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_goneMarginTop="@dimen/_7sdp"
            tools:text="@string/demo_small" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNegative"
            style="@style/Widget.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorTextSecondary"
            android:visibility="visible"
            app:backgroundTint="@color/colorSecondaryVariant"
            app:layout_constraintBottom_toBottomOf="@+id/buttonPositive"
            app:layout_constraintEnd_toStartOf="@+id/buttonPositive"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/buttonPositive"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPositive"
            style="@style/Widget.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/button_primary"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonNegative"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage"
            tools:visibility="visible" />

        <View
            android:id="@+id/bottomPadding"
            android:layout_width="0dp"
            android:layout_height="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/buttonPositive" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


</layout>